--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "lodash": "^3.0.0",
     "mkdirp": "^0.5.0",
     "node-id3": "^0.0.4",
-    "spotify-web": "file:spot_node.tar.gz"
+    "spotify-web": "file:spot_node.tar.gz",
+
+    "socket.io": "*",
+    "express": "*",
+    "http": "*",
+    "body-parser": "*"
   },
   "repository": {
     "type": "git",
