--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lodash": "^3.0.0",
     "mkdirp": "^0.5.0",
     "node-id3": "^0.0.4",
+    "clone": "^1.0.2",
+    "string-format": "^0.5.0",
     "spotify-web": "file:spot_node.tar.gz",
 
     "socket.io": "*",
