--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "main": "main.js",
   "dependencies": {
     "async": "^0.9.0",
+    "babel-polyfill": "^6.9.1",
+    "body-parser": "*",
+    "clone": "^1.0.2",
     "coffee-script": "^1.9.0",
     "colors": "*",
     "commander": "*",
+    "express": "*",
+    "http": "*",
     "lodash": "^3.0.0",
     "mkdirp": "^0.5.0",
     "node-id3": "^0.0.4",
-    "clone": "^1.0.2",
-    "string-format": "^0.5.0",
-    "spotify-web": "file:spot_node.tar.gz",
+    "process": "^0.11.3",
     "request": "*",
-
     "socket.io": "*",
-    "express": "*",
-    "http": "*",
-    "body-parser": "*"
+    "spotify-web": "file:spot_node.tar.gz",
+    "string-format": "^0.5.0"
   },
   "devDependencies": {
     "source-map-support": "^0.4.0"
