--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "request": "*",
     "socket.io": "*",
     "spotify-web": "file:spot_node.tar.gz",
-    "string-format": "^0.5.0"
+    "string-format": "^0.5.0",
+    "sanitize-filename": "^1.6.1"
+
   },
   "devDependencies": {
     "source-map-support": "^0.4.0"
