--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "http": "*",
     "lodash": "^3.0.0",
     "mkdirp": "^0.5.0",
-    "node-id3": "^0.0.4",
+    "node-id3": "^0.0.9",
     "process": "^0.11.3",
     "request": "*",
     "socket.io": "*",
     "spotify-web": "file:spot_node.tar.gz",
     "string-format": "^0.5.0",
-    "sanitize-filename": "^1.6.1"
+    "sanitize-filename": "^1.6.1",
+    "easyimage": "^2.1.0"
 
   },
   "devDependencies": {
